{
  "version": 4,
  "terraform_version": "1.11.4",
  "serial": 216,
  "lineage": "d44a2ee5-591b-cdf0-b99b-0fe2732df558",
  "resources": [
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "allow_health_checks",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "80",
                  "443",
                  "8080"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2025-05-31T18:35:25.180-07:00",
            "deny": [],
            "description": "Allow Google Cloud health checks",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/pinky-promise-app/global/firewalls/production-allow-health-checks",
            "log_config": [],
            "name": "production-allow-health-checks",
            "network": "https://www.googleapis.com/compute/v1/projects/pinky-promise-app/global/networks/production-pinky-promise-vpc",
            "priority": 1000,
            "project": "pinky-promise-app",
            "self_link": "https://www.googleapis.com/compute/v1/projects/pinky-promise-app/global/firewalls/production-allow-health-checks",
            "source_ranges": [
              "130.211.0.0/22",
              "35.191.0.0/16"
            ],
            "source_service_accounts": [],
            "source_tags": [],
            "target_service_accounts": [],
            "target_tags": [],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.networking.google_compute_network.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "allow_http_https",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "80",
                  "443"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2025-05-31T18:35:25.099-07:00",
            "deny": [],
            "description": "Allow HTTP and HTTPS traffic from internet",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/pinky-promise-app/global/firewalls/production-allow-http-https",
            "log_config": [],
            "name": "production-allow-http-https",
            "network": "https://www.googleapis.com/compute/v1/projects/pinky-promise-app/global/networks/production-pinky-promise-vpc",
            "priority": 1000,
            "project": "pinky-promise-app",
            "self_link": "https://www.googleapis.com/compute/v1/projects/pinky-promise-app/global/firewalls/production-allow-http-https",
            "source_ranges": [
              "0.0.0.0/0"
            ],
            "source_service_accounts": [],
            "source_tags": [],
            "target_service_accounts": [],
            "target_tags": [
              "http-server",
              "https-server"
            ],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.networking.google_compute_network.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "allow_iap_ssh",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "22"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2025-05-31T18:35:25.093-07:00",
            "deny": [],
            "description": "Allow SSH access from Identity-Aware Proxy",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/pinky-promise-app/global/firewalls/production-allow-iap-ssh",
            "log_config": [],
            "name": "production-allow-iap-ssh",
            "network": "https://www.googleapis.com/compute/v1/projects/pinky-promise-app/global/networks/production-pinky-promise-vpc",
            "priority": 1000,
            "project": "pinky-promise-app",
            "self_link": "https://www.googleapis.com/compute/v1/projects/pinky-promise-app/global/firewalls/production-allow-iap-ssh",
            "source_ranges": [
              "35.235.240.0/20"
            ],
            "source_service_accounts": [],
            "source_tags": [],
            "target_service_accounts": [],
            "target_tags": [],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.networking.google_compute_network.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "allow_internal",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "0-65535"
                ],
                "protocol": "tcp"
              },
              {
                "ports": [
                  "0-65535"
                ],
                "protocol": "udp"
              },
              {
                "ports": [],
                "protocol": "icmp"
              }
            ],
            "creation_timestamp": "2025-05-31T18:35:25.105-07:00",
            "deny": [],
            "description": "Allow internal communication within VPC",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/pinky-promise-app/global/firewalls/production-allow-internal",
            "log_config": [],
            "name": "production-allow-internal",
            "network": "https://www.googleapis.com/compute/v1/projects/pinky-promise-app/global/networks/production-pinky-promise-vpc",
            "priority": 1000,
            "project": "pinky-promise-app",
            "self_link": "https://www.googleapis.com/compute/v1/projects/pinky-promise-app/global/firewalls/production-allow-internal",
            "source_ranges": [
              "10.0.0.0/16"
            ],
            "source_service_accounts": [],
            "source_tags": [],
            "target_service_accounts": [],
            "target_tags": [],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.networking.google_compute_network.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "google_compute_global_address",
      "name": "private_ip_address",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address": "10.65.0.0",
            "address_type": "INTERNAL",
            "creation_timestamp": "2025-05-31T18:35:25.073-07:00",
            "description": "Private IP range for Cloud SQL",
            "id": "projects/pinky-promise-app/global/addresses/production-private-ip-address",
            "label_fingerprint": "42WmSpB8rSM=",
            "name": "production-private-ip-address",
            "network": "https://www.googleapis.com/compute/v1/projects/pinky-promise-app/global/networks/production-pinky-promise-vpc",
            "prefix_length": 16,
            "project": "pinky-promise-app",
            "purpose": "VPC_PEERING",
            "self_link": "https://www.googleapis.com/compute/v1/projects/pinky-promise-app/global/addresses/production-private-ip-address"
          },
          "dependencies": [
            "module.networking.google_compute_network.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "google_compute_network",
      "name": "vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "auto_create_subnetworks": false,
            "delete_default_routes_on_create": false,
            "description": "VPC network for Pinky Promise application",
            "enable_ula_internal_ipv6": false,
            "id": "projects/pinky-promise-app/global/networks/production-pinky-promise-vpc",
            "mtu": 0,
            "name": "production-pinky-promise-vpc",
            "network_firewall_policy_enforcement_order": "AFTER_CLASSIC_FIREWALL",
            "numeric_id": "535404029112881343",
            "project": "pinky-promise-app",
            "routing_mode": "REGIONAL",
            "self_link": "https://www.googleapis.com/compute/v1/projects/pinky-promise-app/global/networks/production-pinky-promise-vpc"
          }
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "google_compute_router",
      "name": "router",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2025-05-31T18:35:27.591-07:00",
            "description": "Cloud Router for NAT Gateway",
            "encrypted_interconnect_router": false,
            "id": "projects/pinky-promise-app/regions/us-central1/routers/production-router",
            "name": "production-router",
            "network": "https://www.googleapis.com/compute/v1/projects/pinky-promise-app/global/networks/production-pinky-promise-vpc",
            "project": "pinky-promise-app",
            "region": "us-central1",
            "self_link": "https://www.googleapis.com/compute/v1/projects/pinky-promise-app/regions/us-central1/routers/production-router"
          },
          "dependencies": [
            "module.networking.google_compute_network.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "google_compute_router_nat",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "auto_network_tier": "PREMIUM",
            "enable_dynamic_port_allocation": false,
            "enable_endpoint_independent_mapping": false,
            "endpoint_types": [
              "ENDPOINT_TYPE_VM"
            ],
            "icmp_idle_timeout_sec": 30,
            "id": "pinky-promise-app/us-central1/production-router/production-nat-gateway",
            "log_config": [
              {
                "enable": true,
                "filter": "ERRORS_ONLY"
              }
            ],
            "max_ports_per_vm": 0,
            "min_ports_per_vm": 0,
            "name": "production-nat-gateway",
            "nat_ip_allocate_option": "AUTO_ONLY",
            "project": "pinky-promise-app",
            "region": "us-central1",
            "router": "production-router",
            "source_subnetwork_ip_ranges_to_nat": "ALL_SUBNETWORKS_ALL_IP_RANGES",
            "tcp_established_idle_timeout_sec": 1200,
            "tcp_time_wait_timeout_sec": 120,
            "tcp_transitory_idle_timeout_sec": 30,
            "udp_idle_timeout_sec": 30
          },
          "dependencies": [
            "module.networking.google_compute_network.vpc",
            "module.networking.google_compute_router.router"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "google_compute_subnetwork",
      "name": "database",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2025-05-31T18:35:27.274-07:00",
            "description": "Private subnet for database instances",
            "gateway_address": "10.0.3.1",
            "id": "projects/pinky-promise-app/regions/us-central1/subnetworks/production-database-subnet",
            "ip_cidr_range": "10.0.3.0/24",
            "name": "production-database-subnet",
            "network": "https://www.googleapis.com/compute/v1/projects/pinky-promise-app/global/networks/production-pinky-promise-vpc",
            "private_ip_google_access": true,
            "private_ipv6_google_access": "DISABLE_GOOGLE_ACCESS",
            "project": "pinky-promise-app",
            "purpose": "PRIVATE",
            "region": "us-central1",
            "self_link": "https://www.googleapis.com/compute/v1/projects/pinky-promise-app/regions/us-central1/subnetworks/production-database-subnet",
            "stack_type": "IPV4_ONLY"
          },
          "dependencies": [
            "module.networking.google_compute_network.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "google_compute_subnetwork",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2025-05-31T18:35:27.376-07:00",
            "description": "Private subnet for GKE cluster with secondary ranges for pods and services",
            "gateway_address": "10.0.2.1",
            "id": "projects/pinky-promise-app/regions/us-central1/subnetworks/production-private-subnet",
            "ip_cidr_range": "10.0.2.0/24",
            "name": "production-private-subnet",
            "network": "https://www.googleapis.com/compute/v1/projects/pinky-promise-app/global/networks/production-pinky-promise-vpc",
            "private_ip_google_access": true,
            "private_ipv6_google_access": "DISABLE_GOOGLE_ACCESS",
            "project": "pinky-promise-app",
            "purpose": "PRIVATE",
            "region": "us-central1",
            "secondary_ip_range": [
              {
                "ip_cidr_range": "10.1.0.0/16",
                "range_name": "pods"
              },
              {
                "ip_cidr_range": "10.2.0.0/16",
                "range_name": "services"
              }
            ],
            "self_link": "https://www.googleapis.com/compute/v1/projects/pinky-promise-app/regions/us-central1/subnetworks/production-private-subnet",
            "stack_type": "IPV4_ONLY"
          },
          "dependencies": [
            "module.networking.google_compute_network.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "google_compute_subnetwork",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2025-05-31T18:35:27.376-07:00",
            "description": "Public subnet for load balancer and NAT gateway",
            "gateway_address": "10.0.1.1",
            "id": "projects/pinky-promise-app/regions/us-central1/subnetworks/production-public-subnet",
            "ip_cidr_range": "10.0.1.0/24",
            "name": "production-public-subnet",
            "network": "https://www.googleapis.com/compute/v1/projects/pinky-promise-app/global/networks/production-pinky-promise-vpc",
            "private_ip_google_access": false,
            "private_ipv6_google_access": "DISABLE_GOOGLE_ACCESS",
            "project": "pinky-promise-app",
            "purpose": "PRIVATE",
            "region": "us-central1",
            "self_link": "https://www.googleapis.com/compute/v1/projects/pinky-promise-app/regions/us-central1/subnetworks/production-public-subnet",
            "stack_type": "IPV4_ONLY"
          },
          "dependencies": [
            "module.networking.google_compute_network.vpc"
          ]
        }
      ]
    }
  ]
}